@@ -1,3 +1,8 @@
+2002-01-30  Mikhael Goikhman  <migo@homemail.com>
+
+	* configure.in:
+	added generation of utils/fvwm24_convert
+
 2002-01-29  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/stack.c (RaiseOrLowerWindow):
